# legacy-architect

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  streamlit_app.py  test_api.py
app/: api.py
app/legacy/: billing.py
app/services/: billing_service.py
artifacts/: EVIDENCE.md  diff.patch  impact.json  plan.json
legacy_architect/: __main__.py  artifacts.py  char_tests.py  evidence.py  gemini_client.py  git_tools.py  impact.py  patching.py  prompts.py  runner.py  test_runner.py
scripts/: run_tests.ps1  setup_env.ps1
tests/: test_characterization_billing.py  test_smoke.py
